@@ -19,6 +19,8 @@ Tomboy/Addins/ExportToHtml/ExportToHtmlDialog.cs
 Tomboy/Addins/ExportToHtml/ExportToHtml.addin.xml
 Tomboy/Addins/Evolution/EvolutionNoteAddin.cs
 Tomboy/Addins/Evolution/Evolution.addin.xml
+Tomboy/Addins/FileSystemSyncService/FileSystemSyncServiceAddin.cs
+Tomboy/Addins/FileSystemSyncService/FileSystemSyncService.addin.xml
 Tomboy/Addins/FixedWidth/FixedWidthMenuItem.cs
 Tomboy/Addins/FixedWidth/FixedWidth.addin.xml
 Tomboy/Addins/GalagoPresence/GalagoPresenceNoteAddin.cs
@@ -28,14 +30,18 @@ Tomboy/Addins/NoteOfTheDay/NoteOfTheDayPreferences.cs
 Tomboy/Addins/NoteOfTheDay/NoteOfTheDay.addin.xml
 Tomboy/Addins/PrintNotes/PrintNotesNoteAddin.cs
 Tomboy/Addins/PrintNotes/PrintNotes.addin.xml
+Tomboy/Addins/SshSyncService/SshSyncServiceAddin.cs
+Tomboy/Addins/SshSyncService/SshSyncService.addin.xml
 Tomboy/Addins/StickyNoteImport/StickyNoteImportNoteAddin.cs
 Tomboy/Addins/StickyNoteImport/StickyNoteImport.addin.xml
-Tomboy/Addins/Tasks/TaskListWindow.cs
-Tomboy/Addins/Tasks/TaskManager.cs
-Tomboy/Addins/Tasks/TaskOptionsDialog.cs
-Tomboy/Addins/Tasks/TasksApplicationAddin.cs
-Tomboy/Addins/Tasks/TasksNoteAddin.cs
-Tomboy/Addins/Tasks/Tasks.addin.xml
+#Tomboy/Addins/Tasks/TaskListWindow.cs
+#Tomboy/Addins/Tasks/TaskManager.cs
+#Tomboy/Addins/Tasks/TaskOptionsDialog.cs
+#Tomboy/Addins/Tasks/TasksApplicationAddin.cs
+#Tomboy/Addins/Tasks/TasksNoteAddin.cs
+#Tomboy/Addins/Tasks/Tasks.addin.xml
+Tomboy/Addins/WebDavSyncService/WebDavSyncServiceAddin.cs
+Tomboy/Addins/WebDavSyncService/WebDavSyncService.addin.xml
 Tomboy/Applet.cs
 Tomboy/Note.cs
 Tomboy/NoteManager.cs
@@ -48,3 +54,6 @@ Tomboy/Tray.cs
 Tomboy/Utils.cs
 Tomboy/Watchers.cs
 Tomboy/XKeybinder.cs
+Tomboy/Synchronization/SyncDialog.cs
+Tomboy/Synchronization/SyncManager.cs
+Tomboy/Synchronization/SyncUtils.cs
